# mle-training

./: .gitignore  Module_2_1.ipynb  README.md  env.yml  mle-dev.yml  nonstandardcode.py  pyproject.toml  settings.json  setup.cfg  setup.py
Module4.1/: .gitignore  README.md  pyproject.toml
Module4.1/docs/source/: conf.py
Module4.1/src/example_package_tamle.egg-info/: PKG-INFO
Module4.1/src/housing.egg-info/: PKG-INFO  SOURCES.txt
Module4.1/src/housing_package/: ingest_data.py  train.py
Module4.1/src/housing_package.egg-info/: PKG-INFO  requires.txt
Module4.1/tests/functional_tests/: test_training.py
Module5.1/: 01_data_discovery.ipynb
Module5.2/: config.yml  feature_analysis_report_housing.html  feature_analysis_univariate_housing.html  housing.html  local.yml
deploy/conda/: linux_cpu_py310.yml
docker/: Dockerfile  my_docker_session
docs/source/: index.rst
src/example_package_tamle.egg-info/: SOURCES.txt
src/housing_package/: log_config.py  score.py
src/housing_package.egg-info/: SOURCES.txt
tests/functional_tests/: test_installation.py
tests/unit_tests/: test_data_ingestion.py
