[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "housing"
version = "0.1"
authors = [
  { name="Milind Thakur", email="milind.thakur@tigeranalytics.com" },
]
description = "housing"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"url"="https://github.com/pypa/sampleproject",
"Bug Tracker": "https://github.com/pypa/sampleproject/issues"